[gd_scene load_steps=12 format=3 uid="uid://card3d_scene"]

[ext_resource type="Script" path="res://scripts/entities/card.gd" id="1"]

[sub_resource type="BoxMesh" id="BoxMesh_1"]
size = Vector3(0.8, 1.2, 0.05)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.3, 0.3, 0.7, 1)
metallic = 0.2
roughness = 0.8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2"]
albedo_color = Color(0.6, 0.3, 0.7, 1)
emission_enabled = true
emission = Color(0.3, 0.1, 0.3, 1)
emission_energy = 0.3
metallic = 0.3
roughness = 0.6

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3"]
albedo_color = Color(0.9, 0.7, 0.2, 1)
emission_enabled = true
emission = Color(0.5, 0.4, 0.1, 1)
emission_energy = 0.5
metallic = 0.8
roughness = 0.2

[sub_resource type="BoxShape3D" id="BoxShape3D_1"]
size = Vector3(0.8, 1.2, 0.05)

[sub_resource type="Animation" id="Animation_hover"]
resource_name = "hover"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.1, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1"]
_data = {
"hover": SubResource("Animation_hover")
}

[sub_resource type="ViewportTexture" id="ViewportTexture_1"]
viewport_path = NodePath("CardViewport")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1"]
direction = Vector3(0, 1, 0)
initial_velocity_min = 0.2
initial_velocity_max = 0.5
angular_velocity_min = -90.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.1
orbit_velocity_max = 0.2
scale_min = 0.05
scale_max = 0.1

[sub_resource type="SphereMesh" id="SphereMesh_1"]
radial_segments = 8
height = 0.1
radius = 0.05

[node name="Card3D" type="Node3D"]
script = ExtResource("1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1")
}

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.7, 0.03)
text = "Card Name"
font_size = 16
outline_size = 2

[node name="CostLabel3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0.03)
modulate = Color(0.9, 0.7, 0.2, 1)
text = "100"
font_size = 24
outline_size = 3

[node name="RarityIndicator" type="Node3D" parent="."]

[node name="Star1" type="MeshInstance3D" parent="RarityIndicator"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.2, 0.5, 0.03)
visible = false

[node name="Star2" type="MeshInstance3D" parent="RarityIndicator"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0, 0.5, 0.03)
visible = false

[node name="Star3" type="MeshInstance3D" parent="RarityIndicator"]
transform = Transform3D(0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.2, 0.5, 0.03)
visible = false

[node name="LockIndicator" type="Node3D" parent="."]
visible = false

[node name="LockMesh" type="MeshInstance3D" parent="LockIndicator"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0.05)

[node name="BranchesContainer" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0.03)

[node name="CardViewport" type="SubViewport" parent="."]
size = Vector2i(256, 384)
render_target_update_mode = 4

[node name="CardDisplay" type="Control" parent="CardViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="CardViewport/CardDisplay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.3, 1)

[node name="CardArt" type="TextureRect" parent="CardViewport/CardDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
stretch_mode = 3

[node name="EffectText" type="RichTextLabel" parent="CardViewport/CardDisplay"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -20.0
theme_override_font_sizes/normal_font_size = 12
text = "Effect description"

[node name="Particles" type="GPUParticles3D" parent="."]
emitting = false
amount = 10
lifetime = 1.5
process_material = SubResource("ParticleProcessMaterial_1")
draw_pass_1 = SubResource("SphereMesh_1")

[node name="EffectTooltip" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
visible = false
billboard = 1
text = "Card Effect"
font_size = 12
autowrap_mode = 2